--- a/.github/workflows/netlify-preview.yml
+++ b/.github/workflows/netlify-preview.yml
@@ -5,11 +5,6 @@ on:
       - 'netlify-preview'
     paths:
       - 'posts/**'
-  pull_request:
-    branches:
-      - 'netlify-preview'
-    paths:
-      - 'posts/**'
 
 jobs:
   build:
@@ -20,14 +15,9 @@ jobs:
       - name: Set trigger_title environment variable
         run: |
           echo "TRIGGER_TITLE=Triggered+by+Community+Blog+source+repo" >> $GITHUB_ENV
-      - name: Set trigger_branch env.var for preview build
+      - name: Set trigger_branch env.var for source/farmOS-community-blog production build
         run: |
           echo "TRIGGER_BRANCH=source%2FfarmOS-community-blog" >> $GITHUB_ENV
-        if: github.event_name == 'pull_request'
-      - name: Set trigger_branch env.var for main production build
-        run: |
-          echo "TRIGGER_BRANCH=main" >> $GITHUB_ENV
-        if: github.event_name == 'push'
       - name: Trigger Netlify Build Hook
         run: curl -s -X POST -d {} "https://api.netlify.com/build_hooks/${TOKEN}?trigger_branch=${TRIGGER_BRANCH}&trigger_title=${TRIGGER_TITLE}"
         if: ${{ env.TOKEN != '' }}
